@startuml

title __VARIABLE's Class Diagram__\n

  namespace org.block {
    namespace project.block {
      namespace java.variable {
        class org.block.project.block.java.variable.UseVariableBlock {
            {static} + VARIABLE_SECTION : String
            + UseVariableBlock()
            + containsSection()
            + getCodeImports()
            + getExpectedValue()
            + getLinkedBlock()
            + getType()
            + getUniqueSections()
            + getVariableBlockList()
            + paint()
            + updateSize()
            + writeCode()
        }
        class org.block.project.block.java.variable.UseVariableBlock.VariableBlockType {
            + build()
            + build()
            + getName()
            + saveLocation()
        }

        class org.block.project.block.java.variable.UseVariableBlock.VariableLinkBlockList {
            + VariableLinkBlockList()
            + canAcceptAttachment()
            + getParent()
            + getSlot()
            + getXPosition()
            + getYPosition()
        }

        class org.block.project.block.java.variable.VariableBlock {
            {static} + SECTION_NAME : String
            {static} + SECTION_VALUE : String
            - marginX : int
            - marginY : int
            + VariableBlock()
            + VariableBlock()
            + containsSection()
            + getCodeImports()
            + getName()
            + getNameAttachment()
            + getType()
            + getUniqueSections()
            + getVariableAttachment()
            + paint()
            + writeCode()
            - updateSize()
        }
        class org.block.project.block.java.variable.VariableBlock.StringBlockList {
            + StringBlockList()
            + StringBlockList()
            + canAcceptAttachment()
            + getParent()
            + getSlot()
            + getXPosition()
            + getYPosition()
        }
        class org.block.project.block.java.variable.VariableBlock.VariableBlockList {
            + VariableBlockList()
            + VariableBlockList()
            + addAttachment()
            + canAcceptAttachment()
            + getParent()
            + getSlot()
            + getXPosition()
            + getYPosition()
            + removeAttachment()
        }
        class org.block.project.block.java.variable.VariableBlock.VariableBlockType {
            + build()
            + build()
            + getName()
            + saveLocation()
        }
      }
    }
  }
  

  org.block.project.block.java.variable.UseVariableBlock .up.|> org.block.project.block.Block.LinkedBlock
  org.block.project.block.java.variable.UseVariableBlock .up.|> org.block.project.block.Block.SpecificSectionBlock
  org.block.project.block.java.variable.UseVariableBlock .up.|> org.block.project.block.Block.ValueBlock
  org.block.project.block.java.variable.UseVariableBlock -up-|> org.block.project.block.assists.AbstractAttachable
  org.block.project.block.java.variable.UseVariableBlock +-down- org.block.project.block.java.variable.UseVariableBlock.VariableBlockType
  org.block.project.block.java.variable.UseVariableBlock +-down- org.block.project.block.java.variable.UseVariableBlock.VariableLinkBlockList
  org.block.project.block.java.variable.UseVariableBlock.VariableBlockType .up.|> org.block.project.block.BlockType
  org.block.project.block.java.variable.UseVariableBlock.VariableLinkBlockList -up-|> org.block.project.block.assists.AbstractSingleBlockList
  org.block.project.block.java.variable.VariableBlock .up.|> org.block.project.block.Block.SpecificSectionBlock
  org.block.project.block.java.variable.VariableBlock -up-|> org.block.project.block.assists.AbstractAttachable
  org.block.project.block.java.variable.VariableBlock +-down- org.block.project.block.java.variable.VariableBlock.StringBlockList
  org.block.project.block.java.variable.VariableBlock +-down- org.block.project.block.java.variable.VariableBlock.VariableBlockList
  org.block.project.block.java.variable.VariableBlock +-down- org.block.project.block.java.variable.VariableBlock.VariableBlockType
  org.block.project.block.java.variable.VariableBlock.StringBlockList -up-|> org.block.project.block.assists.AbstractSingleBlockList
  org.block.project.block.java.variable.VariableBlock.VariableBlockList -up-|> org.block.project.block.assists.AbstractSingleBlockList
  org.block.project.block.java.variable.VariableBlock.VariableBlockType .up.|> org.block.project.block.BlockType

@enduml
